# RV64I_RWU

./: .gitignore  CMakeLists.txt  README.md  chapter1_document_overview.html  chapter2_product_overview.html  chapter3_architecture_concepts.html  chapter4_design_elements.html  chapter5_test_debug.html  chapter6_memory_maps.html  chapter7_electrical_characteristics.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: chapter2_product_overview.rst.txt  chapter4_design_elements.rst.txt  chapter5_test_debug.rst.txt  references.rst.txt
archive/: all_make_file.md
archive/rwu-rv64i-master/: .gitignore
archive/rwu-rv64i-master/C_Files/Tested Sucess/: 001All_Instrctions.c  002_bss_zero.c  010_gpio_blink.c  011_gpio_blink.c  Final_opt_report.txt  airthmatic.c  conditional_loop.c  fib_recurssive.c  global.c  sumofn.c
archive/rwu-rv64i-master/C_Files/Tested Sucess/Opt_Test/: report.txt  test.c
archive/rwu-rv64i-master/C_Files/Tested Sucess/opt2_test/: report2.txt  test.c
archive/rwu-rv64i-master/C_Files/Tested Sucess/opt3_test/: report3.txt  test.c
archive/rwu-rv64i-master/Report/: Makefile  bibliography.bib  main.tex  opt_workload.c  test.c  test_simple_gpio.c  thesis.sty
archive/rwu-rv64i-master/Report/appendices/: toolchain_source.tex
archive/rwu-rv64i-master/Report/chapters/: 01_introduction.tex  02_background.tex  03_system_overview.tex  04_toolchain_implementation.tex  05_eclipse_integration_and_testing.tex  06_results_and_analysis.tex  07_conclusion_future_work.tex
archive/rwu-rv64i-master/Report/frontmatter/: abstract.tex  acknowledgements.tex  declaration.tex  titlepage.tex
archive/rwu-rv64i-master/Vivado/project_3/: project_3.xpr
archive/rwu-rv64i-master/Vivado/project_3/project_3.cache/ip/2024.2/d/5/d5ee2607f88254f7/: stats.txt  (+6 more)
archive/rwu-rv64i-master/Vivado/project_3/project_3.cache/wt/: synthesis.wdf  webtalk_pa.xml
archive/rwu-rv64i-master/Vivado/project_3/project_3.hw/hw_1/: hw.xml
archive/rwu-rv64i-master/Vivado/project_3/project_3.ip_user_files/mem_init_files/: ila_core.bmj  ila_jtag.bmj
archive/rwu-rv64i-master/Vivado/project_3/project_3.runs/.jobs/: vrs_config_1.xml  vrs_config_35.xml  vrs_config_36.xml  vrs_config_45.xml  vrs_config_48.xml
archive/rwu-rv64i-master/Vivado/project_3/project_3.runs/impl_1/: .opt_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  as_top_mem.bit  as_top_mem.tcl  as_top_mem.vdi  as_top_mem_1313185.backup.vdi  as_top_mem_1708980.backup.vdi  as_top_mem_bus_skew_routed.rpt  as_top_mem_bus_skew_routed.rpx  as_top_mem_clock_utilization_routed.rpt  as_top_mem_control_sets_placed.rpt  as_top_mem_drc_opted.rpt  as_top_mem_drc_opted.rpx  as_top_mem_drc_routed.rpt  as_top_mem_drc_routed.rpx  as_top_mem_io_placed.rpt  as_top_mem_methodology_drc_routed.pb  as_top_mem_methodology_drc_routed.rpt  as_top_mem_methodology_drc_routed.rpx  as_top_mem_opt.dcp  as_top_mem_physopt.dcp  as_top_mem_placed.dcp  as_top_mem_power_routed.rpt  as_top_mem_power_routed.rpx  as_top_mem_power_summary_routed.pb  as_top_mem_route_status.rpt  as_top_mem_timing_summary_routed.pb  as_top_mem_timing_summary_routed.rpt  as_top_mem_timing_summary_routed.rpx  as_top_mem_utilization_placed.pb  as_top_mem_utilization_placed.rpt  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  (+8 more)
archive/rwu-rv64i-master/Vivado/project_3/project_3.runs/synth_1/: .vivado.begin.rst  as_top_mem.dcp  as_top_mem.tcl  as_top_mem.vds  as_top_mem_utilization_synth.pb  as_top_mem_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
archive/rwu-rv64i-master/Vivado/project_3/project_3.runs/synth_1/.Xil/: as_top_mem_propImpl.xdc
archive/rwu-rv64i-master/Vivado/project_3/project_3.srcs/constrs_1/imports/syn/: Zybo-Master.xdc
archive/rwu-rv64i-master/Vivado/project_3/project_3.srcs/sources_1/imports/sim/: riscvtest.mem
archive/rwu-rv64i-master/Vivado/project_3/project_3.srcs/utils_1/imports/synth_1/: as_top_mem.dcp
archive/rwu-rv64i-master/c_complile/: .cproject  .project  crt0.s  linker.ld  rwu-rv64i.h  test.c
archive/rwu-rv64i-master/rv64Sim/: Makefile  hello_gpio.asm  instr02loadhalf.asm  mini_add.asm  readgpioid.asm
archive/rwu-rv64i-master/sim/: makefile  xsim_cfg2.tcl
archive/rwu-rv64i-master/spec/: 00_rwurv64i_all.tex  00_rwurv64i_top.tex  sine.odg
archive/rwu-rv64i-master/spec/03_arch/: 03_arch_history_tab02.tex
archive/rwu-rv64i-master/spec/04_alu/: 04_alu_author_tab01.tex  04_alu_history_tab01.tex  04_alu_tab01.tex  04_alu_text01.tex
archive/rwu-rv64i-master/spec/05_gpio/: 05_gpio_history_tab01.tex  05_gpio_history_tab02.tex  05_gpio_tab02.tex  05_gpio_tab03.tex  05_gpio_tab04.tex  05_gpio_tab05.tex  05_gpio_tab06.tex  05_gpio_tab07.tex  05_gpio_text04.tex  05_gpio_text09.tex  05_gpio_text10.tex
archive/rwu-rv64i-master/src/: asTopMem.sv  as_pack.sv
archive/rwu-rv64i-master/syn/RWU-RV64I01/: RWU-RV64I01.xpr
cmake/modules/: RV64IUtils.cmake  basic_settings.cmake  build_options.cmake  extensions.cmake  firmware_extensions.cmake  git.cmake  paths.cmake  post_build.cmake  python.cmake  test_framework.cmake  verify_doc_toolchain.cmake  verify_riscv_toolchain.cmake  verify_vivado_toolchain.cmake  version.cmake
cmake/toolchain/: riscv64-toolchain.cmake
docs/: CMakeLists.txt  requirements.txt
docs/source/: chapter1_document_overview.rst  chapter3_architecture_concepts.rst  chapter6_memory_maps.rst  chapter7_electrical_characteristics.rst  conf.py  index.rst
firmware/: CMakeLists.txt
rtl/: CMakeLists.txt
rtl/core/: CMakeLists.txt  asGpioTop.sv  asTopMem.sv
rtl/peripherals/: CMakeLists.txt
rtl/peripherals/gpio/: CMakeLists.txt
rtl/peripherals/jtag/: CMakeLists.txt
rtl/peripherals/uart/: CMakeLists.txt
sim/: CMakeLists.txt
verification/: CMakeLists.txt
verification/integration/: CMakeLists.txt
verification/ip/: CMakeLists.txt
verification/ip/jtag/: CMakeLists.txt
verification/ip/uart/: CMakeLists.txt
verification/unit/: CMakeLists.txt
(+40 files in other folders)
